<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/volver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C4450"
    android:contentDescription="@string/constraint"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/textura1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.04"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431"
        app:srcCompat="@drawable/textura1"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/textura2"
        android:layout_width="wrap_content"
        android:layout_height="543dp"
        android:layout_marginBottom="-200dp"
        android:alpha="0.1"
        android:contentDescription="@string/textura_inferior"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/textura2"
        tools:ignore="VisualLintBounds,ImageContrastCheck" />

    <ImageView
        android:id="@+id/textura3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:alpha="0.01"
        android:rotation="180"
        android:scaleType="centerCrop"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:translationY="-520dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/textura3"
        tools:ignore="ContentDescription,VisualLintBounds" />

    <ImageView
        android:id="@+id/titulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/titulo_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titulo1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#9D9FA3"
        android:text="@string/btn_reloj"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#97F294"
        android:text="@string/btn_alarma"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/alarma1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/imagen1"
        app:layout_constraintBottom_toTopOf="@id/alarma2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anadir"
        app:srcCompat="@drawable/alarma1" />

    <ImageButton
        android:id="@+id/alarma2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/alarma_2"
        app:layout_constraintBottom_toTopOf="@id/alarma3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarma1"
        app:srcCompat="@drawable/alarma2" />

    <ImageView
        android:id="@+id/alarma3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="137dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/alarma_3"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarma2"
        app:srcCompat="@drawable/alarma3"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/anadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/anadir_nueva_alarma"
        android:onClick="irpantalla2"
        android:translationX="15dp"
        app:layout_constraintEnd_toStartOf="@+id/opciones"
        app:layout_constraintTop_toBottomOf="@+id/titulo1"
        app:srcCompat="@drawable/anadir"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/opciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/opciones_alarma"
        android:translationY="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/anadir"
        app:srcCompat="@drawable/opciones"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>