<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/volver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C4450"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/textura1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.04"
        android:contentDescription="@string/fondo_principal"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/textura1" />

    <ImageView
        android:id="@+id/textura2"
        android:layout_width="418dp"
        android:layout_height="543dp"
        android:layout_marginBottom="-200dp"
        android:alpha="0.1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/textura2"
        tools:ignore="ContentDescription,VisualLintBounds" />

    <Button
        android:id="@+id/siguiente2"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#97F294"
        android:onClick="irpantalla3"
        android:text="@string/siguiente"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/anterior2" />

    <Button
        android:id="@+id/anterior2"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#9965AC7E"
        android:onClick="volverpantallaprincipal"
        android:text="@string/anterior_2"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/siguiente2"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/textura3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="504dp"
        android:adjustViewBounds="true"
        android:alpha="0.01"
        android:rotation="180"
        android:scaleType="centerCrop"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:translationY="-100dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/textura3"
        tools:ignore="ContentDescription,ImageContrastCheck,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="str nueva alarma"
        android:translationY="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titulo2"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="90dp"
        android:contentDescription="@string/hora_alarma"
        app:layout_constraintBottom_toTopOf="@+id/anterior2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechaalarma"
        app:srcCompat="@drawable/hora" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginBottom="5dp"
        android:text="@string/hora_de_alarma"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/hora"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/alarmanueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:translationY="150dp"
        app:layout_constraintBottom_toTopOf="@id/fechaalarma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        app:srcCompat="@drawable/alarmanueva"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

    <ImageView
        android:id="@+id/fechaalarma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@id/hora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarmanueva"
        app:srcCompat="@drawable/fechaalarma"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>