<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/volver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C4450"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/textura1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.04"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/textura1"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/textura2"
        android:layout_width="418dp"
        android:layout_height="543dp"
        android:layout_marginBottom="-200dp"
        android:alpha="0.1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/textura2"
        tools:ignore="ContentDescription,VisualLintBounds" />

    <ImageView
        android:id="@+id/textura3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:alpha="0.01"
        android:rotation="180"
        android:scaleType="centerCrop"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:translationY="-520dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/textura3"
        tools:ignore="ContentDescription,VisualLintBounds,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="88dp"
        app:layout_constraintBottom_toTopOf="@id/str_persona_respaldo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textura1"
        app:srcCompat="@drawable/titulo2"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/str_persona_respaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/persona_de_respaldo"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/numero_contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <Button
        android:id="@+id/volver5"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#71AA79"
        android:onClick="volverpantalla6"
        android:text="Volver"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guardar_habilitado"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/guardar_habilitado"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#7BF19B"
        android:onClick="guardarfinal"
        android:text="@string/guardar_habilitado"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/volver5" />

    <ImageView
        android:id="@+id/numero_contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/numero_contacto"
        app:layout_constraintBottom_toTopOf="@id/mensaje_contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/str_persona_respaldo"
        app:srcCompat="@drawable/numero"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/mensaje_contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="mensaje a contacto"
        app:layout_constraintBottom_toTopOf="@+id/volver5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numero_contacto"
        app:srcCompat="@drawable/mensaje"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>